hphp/test/zend/bad/ext/posix/tests/posix_setuid_basic.php
<?php

$myuid = posix_getuid();
$uid = var_dump(posix_setuid( $myuid ) );

?>